# MiniMicro2

./: .gitignore  CMakeLists.txt
src/: main.cpp
